[metadata]
name = txfixtures
summary = Treat Twisted applications as Python test fixtures
home-page = https://launchpad.net/txfixtures
description-file = README.rst
author = Martin Pool
author-email = mbp@canonical.com
license = GPLv3
platform = POSIX
classifier = 
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[bdist_wheel]
universal = 1
