[metadata]
name = txfixtures
summary = Treat Twisted applications as Python test fixtures
home-page = https://launchpad.net/txfixtures
description-file = README.rst
author = Martin Pool
author-email = mbp@canonical.com
license = GPLv3
platform = POSIX
classifier = 
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[extras]
test =
    coverage
    mock; python_version<"3"
    systemfixtures>=0.6.2
doc =
    sphinx
phantomjs =
    selenium
mongodb =
    pymongo

[bdist_wheel]
universal = 1
